--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>socialsignin/spring-social-security @ GitHub</title>
+  <title>SocialSignIn @ GitHub</title>
 
   <style type="text/css">
     body {
@@ -31,7 +31,7 @@
 </head>
 
 <body>
-  <a href="http://github.com/socialsignin/spring-social-security"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
+  <a href="http://github.com/socialsignin"><img style="position: absolute; top: 0; right: 0; border: 0;" src="http://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub" /></a>
 
   <div id="container">
 
@@ -42,8 +42,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/socialsignin/spring-social-security">spring-social-security</a>
-      <span class="small">by <a href="http://github.com/socialsignin">socialsignin</a></span></h1>
+    <h1><a href="http://github.com/socialsignin">SocialSignIn</a></h1>
 
     <div class="description">
     Delegating the authentication and security of your application to Spring Social
