--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <img border="0" width="90" src="http://github.com/images/modules/download/tar.png"></a>
     </div>
 
-    <h1><a href="http://github.com/socialsignin">SocialSignIn</a></h1>
+    <h1><a href="http://github.com/socialsignin">The SocialSignIn project</a></h1>
 
     <div class="description">
     Delegating the authentication and security of your application to Spring Social
