--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ SocialSignIn Aims</h2>
 			 of Spring, Spring Security and Spring Social</p>
     
     <h2>Dependencies</h2>
-	<p>Spring Framework 3.1.0, Spring Security 3.1.0, Spring Social 1.0.1, <a href="https://github.com/socialsignin/spring-social-security">Spring Social Security 1.0.1-SNAPSHOT</a>, <a href="https://github.com/socialsignin/socialsignin-provider">SocialSignIn Providers 1.0.1-SNAPSHOT</a></p>
+	<p>Spring Framework 3.1.0, Spring Security 3.1.0, Spring Social 1.0.1, <a href="http://socialsignin.github.com/spring-social-security/">Spring Social Security 1.0.1-SNAPSHOT</a>, <a href="https://github.com/socialsignin/socialsignin-provider">SocialSignIn Providers 1.0.1-SNAPSHOT</a></p>
     <h2>Getting started</h2>
 
 
