--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset='utf-8'>
 
-  <title>The SocialSignIn project - delegating authentication for your Java/Spring webapp to Saas providers</title>
+  <title>The SocialSignIn project - delegating authentication for your Java/Spring webapp to Saas providers using Spring Social and Spring Security 3.1</title>
 
   <style type="text/css">
     body {
