--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@ SocialSignIn Aims</h2>
 			 of Spring, Spring Security and Spring Social</p>
     
     <h2>Dependencies</h2>
-	<p>Spring Framework 3.1.0, Spring Security 3.1.0, Spring Social 1.0.2, <a href="http://socialsignin.github.com/spring-social-security/">Spring Social Security 1.0.2-SNAPSHOT</a>, <a href="https://github.com/socialsignin/socialsignin-provider">SocialSignIn Providers 1.0.2-SNAPSHOT</a></p>
+	<p>Spring Framework 3.1.2, Spring Security 3.1.2, Spring Social 1.0.2, <a href="http://socialsignin.github.com/spring-social-security/">Spring Social Security 1.0.2.RELEASE</a>, <a href="https://github.com/socialsignin/socialsignin-provider">SocialSignIn Providers 1.0.2-SNAPSHOT</a></p>
     <h2>Getting started</h2>
 
 
 <p>Checkout our <a href="https://github.com/socialsignin/socialsignin-showcase">SocialSignIn Showcase</a> project, or use our <a href="https://github.com/socialsignin/mvn-archetype-socialsignin-webapp">SocialSignIn Maven Archetype</a> to create your own sample application.
 
-<p>All non-standard dependencies are deployed to the <a href="http://repo.opensourceagility.com/snapshots">OpenSourceAgility maven snapshot repository</a></p>
+<p>All non-standard dependencies are deployed to the <a href="http://repo.opensourceagility.com/snapshots">OpenSourceAgility maven snapshot repository</a> and the <a href="http://repo.opensourceagility.com/releases">OpenSourceAgility maven release repository</a></p>
 
 
 
